clusters/talos-cluster/vor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vor
  namespace: vor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vor
  template:
    metadata:
      labels:
        app: vor
    spec:
      containers:
        - name: vor
          image: zot.maix.ovh/vor:v0.0.4@sha256:ec4e4db940bde0aead75cee87624600a46a10ac881157e13848a165a3f56e5d8
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
      imagePullSecrets:
        - name: zot-pull-secret
