clusters/talos-cluster/vor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vor
  namespace: vor
spec:
  selector:
    app: vor
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
