clusters/talos-cluster/vor/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vor-route
  namespace: vor
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "vor.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vor
          port: 80
